layers menu with fixed maximum height scrollbars visible if maximum height overflows

--- a/css/index.less
+++ b/css/index.less
@@ -152,11 +152,30 @@ div.disabled{
 
 nav .pagination li a{
     color: black;
-    cursor: pointer;
+    cursor: pointer; 
 }
 
 .clickable{
     cursor: pointer;
+}
+
+/***
+Scrollable bootstrap dropdown
+http://stackoverflow.com/questions/19227496/scrollable-menu-with-bootstrap-3-menu-expanding-its-container-when-it-should-n
+****/
+.scrollable-menu {
+    height: auto;
+    max-height: 400px;
+    overflow-x: hidden;
+}
+.scrollable-menu::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 12px;        
+}    
+.scrollable-menu::-webkit-scrollbar-thumb {
+    border-radius: 3px;
+    background-color: lightgray;
+    -webkit-box-shadow: 0 0 1px rgba(255,255,255,.75);        
 }
 
 select.clean{
